# whisper-board

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  flake.nix  settings.gradle.kts
.github/workflows/: ci.yml  nightly.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/whisperboard/: WhisperBoardIME.kt
app/src/main/kotlin/com/whisperboard/audio/: AudioPipeline.kt
app/src/main/kotlin/com/whisperboard/model/: AppPreferences.kt  LanguageRepository.kt  ModelInfo.kt  ModelManifest.kt  ModelRepository.kt  WhisperLanguages.kt
app/src/main/kotlin/com/whisperboard/settings/: ImportModelDialog.kt  ModelManagerScreen.kt  SettingsActivity.kt  SettingsScreen.kt
app/src/main/kotlin/com/whisperboard/transcription/: ApiEngine.kt  ApiProvider.kt  ApiSettingsRepository.kt  EngineRouter.kt  EngineStrategy.kt  LocalEngine.kt  TranscriptionEngine.kt  WavEncoder.kt
app/src/main/kotlin/com/whisperboard/ui/: EditingKeys.kt  KeyboardView.kt  KeyboardViewModel.kt  LanguageChip.kt  LanguagePickerDialog.kt  MicButton.kt  TranscriptionArea.kt  WaveformBar.kt
app/src/main/kotlin/com/whisperboard/ui/theme/: WhisperBoardTheme.kt
app/src/main/res/drawable/: ic_backspace.xml  ic_enter.xml  ic_mic.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: method.xml
docs/plans/: 2026-03-16-ci-cd-design.md  2026-03-16-custom-model-import-design.md  2026-03-16-custom-model-import.md  2026-03-16-phase2-model-management.md  2026-03-16-phase3-keyboard-ui-design.md  2026-03-16-phase3-keyboard-ui.md  2026-03-16-phase4-api-fallback-design.md  2026-03-16-phase4-api-fallback.md  2026-03-16-ui-overhaul-design.md  2026-03-16-ui-overhaul-plan.md
gradle/: libs.versions.toml
whisper/: build.gradle.kts
whisper/src/main/jni/: CMakeLists.txt  jni.c
whisper/src/main/kotlin/com/whisperboard/whisper/: WhisperContext.kt  WhisperLib.kt
